log
Thu 07 Sep 2023 04:10:47 PM UTC: 
 tests:  0|6
total_score: 0/70
0ceb94c
Thu 07 Sep 2023 04:48:39 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
fedaecf
Thu 07 Sep 2023 06:56:59 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:13: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   60 |             return;
      |             ^~~~~~
hashmap.c:54:11: note: declared here
   54 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ff276db
Thu 07 Sep 2023 06:57:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f1547b1
Thu 07 Sep 2023 06:57:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f35c828
Thu 07 Sep 2023 06:59:21 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
7643378
Thu 07 Sep 2023 07:00:01 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
dac225b
Thu 07 Sep 2023 07:00:31 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
37a8e84
Thu 07 Sep 2023 07:06:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
860b48e
Thu 07 Sep 2023 07:29:34 PM UTC: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8615513
